--- a/_html/overview.html
+++ b/_html/overview.html
@@ -40,7 +40,7 @@
 			<!--/main-video-box-->
 			
 			<!--main-overview-tiles-box-->
-			<div class="main-overview-tiles-box cnt-section no-ptop">
+			<div class="main-overview-tiles-box cnt-section no-ptop no-pbottom-m">
 				<div class="inner-wrap">
 					<div class="main-title-wrap">
 						<div class="page-subtitle title-gradient">Crowdfunding</div>
@@ -107,7 +107,7 @@
 			<!--/main-overview-tiles-box-->
 			
 			<!--main-tiles-overview-second-box-->
-			<div class="main-tiles-overview-second-box cnt-section">
+			<div class="main-tiles-overview-second-box cnt-section no-pbottom">
 				<div class="inner-wrap">
 					<div class="main-title-wrap">
 						<div class="page-subtitle title-gradient">Current Metrics</div>
@@ -138,7 +138,7 @@
 								<div class="tile-title text-body-large">Exceptional  IT <br>technology <br> platform.</div>
 								<div class="tile-text">
 									<p>It Works using Our Live, In-house Software and Infrastructure.</p>
-									<p>Compliance, accounting, reconciliation, anti-fraud, transactional monitoring, etc. Everything is live.</p>
+									<p>Compliance, accounting, reconciliation, anti‑fraud, transactional monitoring, etc. Everything is live.</p>
 								</div>
 							</div>
 						</div>
@@ -179,7 +179,7 @@
 			<!--main-overview-title-box-->
 			<div class="main-overview-title-box cnt-section">
 				<div class="inner-wrap">
-					<h2 class="h2-title">Services, accounting, compliance, reconciliation, anti-fraud, transactional monitoring, etc. <br><span class="title-gradient gr12">Everything is live.</span></h2>
+					<h2 class="h2-title">Services, accounting, compliance, reconciliation, anti‑fraud, transactional monitoring, etc. <br><span class="title-gradient gr12">Everything is live.</span></h2>
 				</div>
 			</div>
 			<!--/main-overview-title-box-->
