--- a/_html/pitch.html
+++ b/_html/pitch.html
@@ -174,7 +174,7 @@
 												</div>
 												<div class="tile-button-wrap">
 													<a href="" class="btn-action-app">
-														<img src="./img/button-apple.svg" alt="">
+														<img src="./img/button-apple-light.svg" alt="">
 													</a>
 												</div>
 											</div>
@@ -184,7 +184,7 @@
 												</div>
 												<div class="tile-button-wrap">
 													<a href="" class="btn-action-app">
-														<img src="./img/button-google.svg" alt="">
+														<img src="./img/button-google-light.svg" alt="">
 													</a>
 												</div>
 											</div>
@@ -495,7 +495,7 @@
 				<!--/main-info-text-box-->
 				
 				<!--main-roadmap-tiles-box-->
-				<div class="main-roadmap-tiles-box cnt-section">
+				<div class="main-roadmap-tiles-box cnt-section no-ptop-m">
 					<div class="inner-wrap">
 						<div class="main-title-wrap">
 							<div class="page-subtitle title-gradient">Road map</div>
@@ -783,9 +783,48 @@
 											<li>$45.3 in 2023, $35.6 in 2025, $26.3 in 2028</li>
 										</ul>
 									</div>
-									<div class="tile-photo-wrap">
-										<div class="tile-photo">
-											<img src="./img/scheme.svg" alt="">
+									<div class="tile-scheme-wrap">
+										<div class="item-tile-scheme-inner">
+											<div class="tile-scheme-title-main">Numbers of customers</div>
+											<div class="tile-scheme-items-outer">
+												<div class="tile-scheme-items">
+													<div class="tile-scheme-item" data-scale="1">
+														<div class="tile-scheme-title">15k</div>
+														<div class="tile-scheme-scale"></div>
+														<div class="tile-scheme-period">2022</div>
+													</div>
+													<div class="tile-scheme-item" data-scale="7">
+														<div class="tile-scheme-title">467k</div>
+														<div class="tile-scheme-scale"></div>
+														<div class="tile-scheme-period">2023</div>
+													</div>
+													<div class="tile-scheme-item" data-scale="12">
+														<div class="tile-scheme-title">1.9m</div>
+														<div class="tile-scheme-scale"></div>
+														<div class="tile-scheme-period">2024</div>
+													</div>
+													<div class="tile-scheme-item" data-scale="27">
+														<div class="tile-scheme-title">4.9m</div>
+														<div class="tile-scheme-scale"></div>
+														<div class="tile-scheme-period">2025</div>
+													</div>
+													<div class="tile-scheme-item" data-scale="39">
+														<div class="tile-scheme-title">10.9m</div>
+														<div class="tile-scheme-scale"></div>
+														<div class="tile-scheme-period">2026</div>
+													</div>
+													<div class="tile-scheme-item" data-scale="60">
+														<div class="tile-scheme-title">23.2m</div>
+														<div class="tile-scheme-scale"></div>
+														<div class="tile-scheme-period">2027</div>
+													</div>
+													<div class="tile-scheme-item" data-scale="80">
+														<div class="tile-scheme-title">41.4m</div>
+														<div class="tile-scheme-scale"></div>
+														<div class="tile-scheme-period">2028</div>
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 									<div class="tile-action-wrap">
@@ -912,7 +951,7 @@
 										<div class="tile-title">We will achieve </div>
 										<p>12 month projection of achievement:</p>
 										<div class="tile-section-wrap">
-											<div class="tile-subtitle">Plans and Projections <a href="">See here</a></div>
+											<div class="tile-subtitle subtitle-link">Plans and Projections <a href="">See here</a></div>
 											<ul>
 												<li>New products and services</li>
 												<li>Launch in 3 new Debit Card markets</li>
@@ -951,14 +990,14 @@
 				<!--/main-tiles-pitch-box-->
 				
 				<!--main-tables-box-->
-				<div class="main-tables-box cnt-section">
+				<div class="main-tables-box cnt-section no-pbottom no-ptop">
 					<div class="inner-wrap">
 						<div class="main-title-wrap">
 							<h2 class="h1-title title-large title-gradient">Addendum </h2>
 						</div>
 						<!--box wrap-->
 						<div class="box-inner-wrap">
-							<div class="title-inner-wrap">
+							<div class="title-inner-wrap text-body-main">
 								<div class="h6-title title-gradient">Analysis</div>
 								<h3 class="h4-title">Competitive Analysis</h3>
 								<p>Competitor statistics by founding date, amounts raised and company valuation in recent rounds.</p>
@@ -973,7 +1012,7 @@
 						<!--end box wrap-->
 						<!--box wrap-->
 						<div class="box-inner-wrap">
-							<div class="title-inner-wrap text-large">
+							<div class="title-inner-wrap text-body-main">
 								<div class="h6-title title-gradient">Analysis</div>
 								<h3 class="h4-title">Valuation Analysis</h3>
 								<p>Valuations of competitors' companies by the P/S ratio (the company's market capitalization in an investment transaction divided by the company's sales volume) on A-C Series rounds.</p>
