--- a/_html/products.html
+++ b/_html/products.html
@@ -112,7 +112,7 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-services-list">
-								<div class="tile-title h5-title">Banking </div>
+								<div class="tile-title h5-title">Credits banking service</div>
 								<div class="tile-info-wrap">
 									<div class="tile-info">
 										<div class="tile-ico color-blue">
@@ -142,7 +142,7 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-services-list">
-								<div class="tile-title h5-title">Crypto service </div>
+								<div class="tile-title h5-title">Credits crypto service</div>
 								<div class="tile-info-wrap">
 									<div class="tile-info">
 										<div class="tile-ico color-violet">
@@ -193,7 +193,7 @@
 						<!--item wrap-->
 						<div class="item-wrap">
 							<div class="item-tile-services-list">
-								<div class="tile-title h5-title">On/Ramp  payment gateway  </div>
+								<div class="tile-title h5-title">On/Ramp payment gateway   </div>
 								<div class="tile-info-wrap">
 									<div class="tile-info">
 										<div class="tile-ico color-orange">
@@ -396,7 +396,7 @@
 					<div class="main-title-wrap text-body">
 						<div class="page-subtitle title-gradient">Traction. Current metrics</div>
 						<h2 class="h4-title">Fully live services</h2>
-						<p>After two and a half years of development, we launched our services in Q3 2022 with fully complaint licensed banking-crypto services. </p>
+						<p>After two and a half years of development, we launched our services in Q3 2022 with fully complaint licensed banking-crypto services.  </p>
 					</div>
 					<div class="items-wrap">
 						<!--item wrap-->
