--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <li><a href="STO.html">STO</a></li>
                 <li><a href="roadmap.html">Roadmap</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="pitch.html">Pitch --в работе</a></li>
+                <li><a href="pitch.html">Pitch</a></li>
                 <li><a href="partnerships.html">Partnerships</a></li>
                 <li><a href="overview.html">Overview</a></li>
                 <li><a href="bounty.html">Bounty</a></li>
