--- a/products.html
+++ b/products.html
@@ -202,7 +202,7 @@
                     <!--item wrap-->
                     <div class="item-wrap">
                         <div class="item-tile-services-list">
-                            <div class="tile-title h5-title">Banking </div>
+                            <div class="tile-title h5-title">Credits banking service</div>
                             <div class="tile-info-wrap">
                                 <div class="tile-info">
                                     <div class="tile-ico color-blue">
@@ -232,7 +232,7 @@
                     <!--item wrap-->
                     <div class="item-wrap">
                         <div class="item-tile-services-list">
-                            <div class="tile-title h5-title">Crypto service </div>
+                            <div class="tile-title h5-title">Credits crypto service</div>
                             <div class="tile-info-wrap">
                                 <div class="tile-info">
                                     <div class="tile-ico color-violet">
