--- a/roadmap.html
+++ b/roadmap.html
@@ -261,9 +261,48 @@
                                     <li>$45.3 in 2023, $35.6 in 2025, $26.3 in 2028</li>
                                 </ul>
                             </div>
-                            <div class="tile-photo-wrap">
-                                <div class="tile-photo">
-                                    <img src="./img/scheme.svg" alt="">
+                            <div class="tile-scheme-wrap">
+                                <div class="item-tile-scheme-inner">
+                                    <div class="tile-scheme-title-main">Numbers of customers</div>
+                                    <div class="tile-scheme-items-outer">
+                                        <div class="tile-scheme-items">
+                                            <div class="tile-scheme-item" data-scale="1">
+                                                <div class="tile-scheme-title">15k</div>
+                                                <div class="tile-scheme-scale"></div>
+                                                <div class="tile-scheme-period">2022</div>
+                                            </div>
+                                            <div class="tile-scheme-item" data-scale="7">
+                                                <div class="tile-scheme-title">467k</div>
+                                                <div class="tile-scheme-scale"></div>
+                                                <div class="tile-scheme-period">2023</div>
+                                            </div>
+                                            <div class="tile-scheme-item" data-scale="12">
+                                                <div class="tile-scheme-title">1.9m</div>
+                                                <div class="tile-scheme-scale"></div>
+                                                <div class="tile-scheme-period">2024</div>
+                                            </div>
+                                            <div class="tile-scheme-item" data-scale="27">
+                                                <div class="tile-scheme-title">4.9m</div>
+                                                <div class="tile-scheme-scale"></div>
+                                                <div class="tile-scheme-period">2025</div>
+                                            </div>
+                                            <div class="tile-scheme-item" data-scale="39">
+                                                <div class="tile-scheme-title">10.9m</div>
+                                                <div class="tile-scheme-scale"></div>
+                                                <div class="tile-scheme-period">2026</div>
+                                            </div>
+                                            <div class="tile-scheme-item" data-scale="60">
+                                                <div class="tile-scheme-title">23.2m</div>
+                                                <div class="tile-scheme-scale"></div>
+                                                <div class="tile-scheme-period">2027</div>
+                                            </div>
+                                            <div class="tile-scheme-item" data-scale="80">
+                                                <div class="tile-scheme-title">41.4m</div>
+                                                <div class="tile-scheme-scale"></div>
+                                                <div class="tile-scheme-period">2028</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="tile-action-wrap">
