--- a/STO.html
+++ b/STO.html
@@ -142,7 +142,7 @@
                         <div class="item-wrap">
                             <div class="item-tile-info-text">
                                 <div class="tile-ico">
-                                    <img src="./img/icons/tile.svg" alt="">
+                                    <img src="./img/icons/tile-second.svg" alt="">
                                 </div>
                                 <h4 class="h6-title">2. Direct investment in the company.</h4>
                                 <p>The investor buys the company's shares under the terms of the SAFE agreement and immediately becomes a shareholder of CREDITS.COM TECHNOLOGY INC. <br>Minimum purchase 10,000 USD</p>
@@ -189,15 +189,15 @@
                             <tr>
                                 <th>Timeline</th>
                                 <td>
-                                    <p><b>1. Pre-STO:</b> From Feb 01, 2023 to Mar 31, 2023</p>
-                                    <p><b>2. Main-STO:</b> From Apr 01, 2023 to June 30, 2023</p>
+                                    <p><b>1. Pre-STO:</b> From Feb 01, 2023 to Mar 31, 2023.</p>
+                                    <p><b>2. Main-STO:</b> From Apr 01, 2023 to June 30, 2023.</p>
                                 </td>
                             </tr>
                             <tr>
                                 <th>Limits</th>
                                 <td>
-                                    <p><b>1. Pre-STO: Investment limit:</b> min: $100 USD, max: $1,000 USD</p>
-                                    <p><b>2. Main-STO: Investment limit:</b> min: $100 USD, max: $10,000 USD</p>
+                                    <p><b>1. Pre-STO: Investment limit:</b> min: $100 USD, max: $1,000 USD.</p>
+                                    <p><b>2. Main-STO: Investment limit:</b> min: $100 USD, max: $10,000 USD.</p>
                                 </td>
                             </tr>
                             <tr>
@@ -257,7 +257,7 @@
                             <tr>
                                 <th>Direct investment in companies shares</th>
                                 <td>
-                                    <p>Only for accredited investors with min 10,000 USD</p>
+                                    <p>Only for accredited investors with min 10,000 USD.</p>
                                 </td>
                             </tr>
                             <tr>
@@ -269,19 +269,19 @@
                             <tr>
                                 <th>Minimum Investment:</th>
                                 <td>
-                                    <p>$50,000 USD</p>
+                                    <p>$50,000 USD.</p>
                                 </td>
                             </tr>
                             <tr>
                                 <th>Type of agreement:</th>
                                 <td>
-                                    <p>SAFE, SSA (shareholder subscription agreement)</p>
+                                    <p>SAFE, SSA (shareholder subscription agreement).</p>
                                 </td>
                             </tr>
                             <tr>
                                 <th>How to invest?</th>
                                 <td>
-                                    <p>Please, create an account in Credits.com</p>
+                                    <p>Please, create an account in Credits.com.</p>
                                     <p>Or contact legal team to email <a href="mailto:legal@cedits.com">legal@cedits.com</a>.</p>
                                     <p><a href="">Read more</a></p>
                                 </td>
@@ -474,7 +474,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="action-wrap">
+                        <div class="action-wrap action-qr">
                             <div class="action-title">Scan to download </div>
                             <div class="action-button">
                                 <a href="" class="btn-action-qr">
