--- a/_html/about.html
+++ b/_html/about.html
@@ -175,7 +175,7 @@
 									</div>
 									<div class="tile-photo-wrap">
 											<div class="tile-photo photo-main"><img src="./img/icons-about-second.svg" alt=""></div>
-											<div class="tile-photo photo-second"><img src="./img/phone-about.svg" alt=""></div>
+											<div class="tile-photo photo-second"><img src="./img/phone-about.png" alt=""></div>
 									</div>
 								</div>
 							</div>
