--- a/_html/bounty.html
+++ b/_html/bounty.html
@@ -61,23 +61,23 @@
 								<tr>
 									<th>Remuneration amount</th>
 									<td>
-										<p><b>Tier 1:</b> $5,000/month</p>
-										<p><b>Tier 2:</b> $1,500/month</p>
-										<p><b>Tier 3:</b> $1,000/month</p>
+										<p><b>Tier 1:</b> $5,000/month.</p>
+										<p><b>Tier 2:</b> $1,500/month.</p>
+										<p><b>Tier 3:</b> $1,000/month.</p>
 									</td>
 								</tr>
 								<tr>
 									<th>Payment of remuneration</th>
 									<td>
-										<p>50% is paid in stable tokens </p>
-										<p>50% tokenized CSS shares</p>
+										<p>50% is paid in stable tokens .</p>
+										<p>50% tokenized CSS shares.</p>
 									</td>
 								</tr>
 								<tr>
 									<th>Condition</th>
 									<td>
-										<p>Open an account, pay for KYC verification, perform the operation</p>
-										<p>After that, you will receive promotion tokens within 5 days</p>
+										<p>Open an account, pay for KYC verification, perform the operation.</p>
+										<p>After that, you will receive promotion tokens within 5 days.</p>
 									</td>
 								</tr>
 								<tr>
@@ -99,14 +99,9 @@
 					<div class="main-title-wrap text-body-small">
 						<h2 class="h2-title">Referral</h2>
 						<p>A loyalty program in which users can receive rewards by inviting friends to register with Credits and become an investor.</p>
-						<ul>
-							<li>A loyalty program in</li>
-							<li>which users can receive rewards by</li>
-							<li>inviting friends to register with</li>
-						</ul>
 						<a href="" class="btn button-large">Join Referral program</a>
 					</div>
-					<div class="box-inner-wrap">
+					<div class="box-inner-wrap box-second">
 						<div class="title-inner-wrap text-body-small">
 							<h3 class="h5-title">Referral terms and conditions</h3>
 							<p>An approved referral is a new user who signed up for Credits using your link and made transactions for which a reward is paid.</p>
@@ -137,7 +132,7 @@
 								<tr>
 									<th>Basic condition</th>
 									<td>
-										<p>Payment is due 30 days after the completion of the company's STO. Payment is made in company tokens Reward</p>
+										<p>Payment is due 30 days after the completion of the company's STO. Payment is made in company tokens Reward.</p>
 									</td>
 								</tr>
 								<tr>
@@ -149,9 +144,9 @@
 								<tr>
 									<th>Lockup period</th>
 									<td>
-										<p>Tokens will be locked for 1 year after the completion of the Main-STO round</p>
-										<p>During the period of the company's STO..</p>
-										<p>Period Pre-STO , Main-STO</p>
+										<p>Tokens will be locked for 1 year after the completion of the Main-STO round.</p>
+										<p>During the period of the company's STO.</p>
+										<p>Period Pre-STO , Main-STO.</p>
 									</td>
 								</tr>
 							</tbody>
