--- a/_html/partnerships.html
+++ b/_html/partnerships.html
@@ -169,19 +169,19 @@
 				<div class="inner-wrap">
 					
 					<div class="main-title-wrap">
-						<h2 class="h2-title">Debit cards Parters</h2>
+						<h2 class="h2-title">Debit cards Partners</h2>
 					</div>
 					<div class="items-inner-wrap">
 						<div class="items-wrap">
 							<!--item wrap-->
 							<div class="item-wrap">
-								<div class="item-tile-prt text-body tile-color-second">
+								<div class="item-tile-prt text-body">
 									<div class="tile-title-wrap">
-										<div class="tile-title page-subtitle">Debit card partner</div>
+										<div class="tile-title page-subtitle title-gradient">Debit card partner</div>
 									</div>
-									<div class="tile-logo-wrap">
-										<img src="./img/l01.png" alt="" class="tile-logo">
-									</div>
+									<a href="" class="tile-logo-wrap">
+										<img src="./img/l01.svg" alt="" class="tile-logo">
+									</a>
 									<div class="tile-text-wrap">
 										<div class="tile-text">Unlimint is Credits’ partner for issuing Debit cards for EU customers with a view to scaling into Mexico and Brazil.</div>
 									</div>
@@ -190,13 +190,13 @@
 							<!--/item wrap-->
 							<!--item wrap-->
 							<div class="item-wrap">
-								<div class="item-tile-prt text-body">
+								<div class="item-tile-prt text-body tile-color-second">
 									<div class="tile-title-wrap">
-										<div class="tile-title page-subtitle title-gradient">Debit card partner</div>
+										<div class="tile-title page-subtitle">Debit card partner</div>
 									</div>
-									<div class="tile-logo-wrap">
-										<img src="./img/l02.png" alt="" class="tile-logo">
-									</div>
+									<a href="" class="tile-logo-wrap">
+										<img src="./img/l02.svg" alt="" class="tile-logo">
+									</a>
 									<div class="tile-text-wrap">
 										<div class="tile-text">Credits is a Railsr partner for global Debit Cards and a payment provider for business and retail for EEA customers</div>
 									</div>
@@ -218,7 +218,7 @@
 										<div class="tile-subtitle">Debit card</div>
 										<div class="tile-title">UnionPay card for Asian market</div>
 										<div class="tile-logo">
-											<img src="./img/l-card-logo.png" alt="">
+											<img src="./img/l-card-logo.svg" alt="">
 										</div>
 									</div>
 								</div>
@@ -231,11 +231,11 @@
 										<div class="tile-title">Partner</div>
 										<div class="tile-info">To be announced soon</div>
 									</div>
-									<div class="tile-logo">
-										<img src="./img/l03.png" alt="">
+									<div class="tile-logo-text">
+										TBA
 									</div>
 									<div class="tile-info-wrap">
-										<p>Credits going to launch a prepaid UnionPay card for travelers with cryptocurrency support in 2023.</p>
+										<p>Credits is going to launch a prepaid UnionPay card for travelers with cryptocurrency support in 2023.</p>
 										<p>The card will be accepted by over 30 million UnionPay merchants in 179 countries and regions, including China.</p>
 									</div>
 									<div class="tile-action">
@@ -248,7 +248,7 @@
 					</div>
 					
 					<div class="main-title-wrap">
-						<h2 class="h2-title">Investment Products Partener</h2>
+						<h2 class="h2-title">Investment Products Partner</h2>
 					</div>
 					<div class="items-inner-wrap">
 						<div class="items-wrap">
@@ -277,8 +277,8 @@
 										<div class="tile-title">Partner</div>
 										<div class="tile-info">To be announced soon</div>
 									</div>
-									<div class="tile-logo">
-										<img src="./img/l04.png" alt="">
+									<div class="tile-logo-text">
+										TBA
 									</div>
 									<div class="tile-info-wrap">
 										<p>Credits partner for providing an investment gateway and stock market – direct access to the world's largest stock exchanges in the US, Europe and Asian markets.</p>
@@ -306,11 +306,11 @@
 									</div>
 									<div class="tile-photo-wrap">
 										<div class="tile-photo photo-contain">
-											<img src="./img/l05.png" alt="">
+											<img src="./img/l05.svg" alt="">
 										</div>
 									</div>
 									<div class="tile-text-wrap">
-										<p>Credits is a PayPay partner for providing fast and convenient payments.</p>
+										<p>Credits is a PayPal partner for providing fast and convenient payments.</p>
 									</div>
 								</div>
 							</div>
@@ -323,11 +323,11 @@
 									</div>
 									<div class="tile-photo-wrap">
 										<div class="tile-photo photo-contain">
-											<img src="./img/l06.png" alt="">
+											<img src="./img/l06.svg" alt="">
 										</div>
 									</div>
 									<div class="tile-text-wrap">
-										<p>Credits partner for cryptocurrency acquisition and IBAN accounts.</p>
+										<p>Credits is a partner for cryptocurrency acquisition and IBAN accounts.</p>
 									</div>
 								</div>
 							</div>
@@ -340,11 +340,11 @@
 									</div>
 									<div class="tile-photo-wrap">
 										<div class="tile-photo photo-contain">
-											<img src="./img/l07.png" alt="">
+											<img src="./img/l07.svg" alt="">
 										</div>
 									</div>
 									<div class="tile-text-wrap">
-										<p>Credits is a Partner for payment solutions using worldwide cashless payments.</p>
+										<p>Credits is a partner for payment solutions using worldwide cashless payments.</p>
 									</div>
 								</div>
 							</div>
@@ -357,11 +357,11 @@
 									</div>
 									<div class="tile-photo-wrap">
 										<div class="tile-photo photo-contain">
-											<img src="./img/l08.png" alt="">
+											<img src="./img/l08.svg" alt="">
 										</div>
 									</div>
 									<div class="tile-text-wrap">
-										<p>Credits is a Partner for payment solutions for European customers.</p>
+										<p>Credits is a partner for&nbsp;payment solutions for European customers.</p>
 									</div>
 								</div>
 							</div>
@@ -400,7 +400,7 @@
 									</div>
 									<div class="tile-photo-wrap">
 										<div class="tile-photo">
-											<img src="./img/l09.png" alt="">
+											<img src="./img/l09.svg" alt="">
 										</div>
 									</div>
 								</div>
@@ -414,7 +414,7 @@
 									</div>
 									<div class="tile-photo-wrap">
 										<div class="tile-photo">
-											<img src="./img/l10.png" alt="">
+											<img src="./img/l10.svg" alt="">
 										</div>
 									</div>
 								</div>
