--- a/roadmap.html
+++ b/roadmap.html
@@ -638,7 +638,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="action-wrap">
+                        <div class="action-wrap action-qr">
                             <div class="action-title">Scan to download </div>
                             <div class="action-button">
                                 <a href="" class="btn-action-qr">
