--- a/_html/pitch.html
+++ b/_html/pitch.html
@@ -585,7 +585,7 @@
 											<div class="tile-logo">
 												<img src="./img/i-logo01.svg" alt="">
 											</div>
-											<div class="tile-logo-title">Cryptocurrency acquiring</div>
+											<div class="tile-logo-title">Cryptocurrency <br>acquiring</div>
 										</div>
 										<div class="tile-logo-wrap">
 											<div class="tile-logo">
@@ -621,7 +621,7 @@
 											<div class="tile-logo">
 												<img src="./img/i-logo05.svg" alt="">
 											</div>
-											<div class="tile-logo-title">Mastercard for EU via Unlimint.</div>
+											<div class="tile-logo-title">Mastercard for EU via Unlimint</div>
 										</div>
 										<div class="tile-logo-wrap">
 											<div class="tile-logo">
@@ -670,7 +670,7 @@
 											<div class="tile-logo-title">2 global FX providers</div>
 										</div>
 										<div class="tile-logo-wrap">
-											<div class="tile-logo-title">Turkey, Indonesia, Philippines.</div>
+											<div class="tile-logo-title">Turkey, Indonesia, Philippines</div>
 										</div>
 										<div class="tile-logo-wrap">
 											<div class="tile-logo-title">Principal acquiring provider</div>
@@ -936,7 +936,7 @@
 											<ul>
 												<li>Allowed for US, Canada and others for accredited investors.</li>
 												<li>Min investments: $50,000 USD</li>
-												<li>Type: Safe, Shareholder Subscription Agreement</li>
+												<li>Type: Stock Purchase Agreement</li>
 											</ul>
 											<div class="tile-action">
 												<a href="">Contact team</a>
@@ -964,9 +964,6 @@
 												<li>468k new customers acquired</li>
 												<li>$10.6m annual revenue</li>
 											</ul>
-											<div class="tile-action">
-												<a href="">Contact team</a>
-											</div>
 										</div>
 									</div>
 								</div>
