--- a/ld.html
+++ b/ld.html
@@ -296,7 +296,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="action-wrap">
+                        <div class="action-wrap action-qr">
                             <div class="action-title">Scan to download </div>
                             <div class="action-button">
                                 <a href="" class="btn-action-qr">
