--- a/overview.html
+++ b/overview.html
@@ -441,7 +441,7 @@
                                     </div>
                                     <div class="tile-photo-wrap photo-large">
                                         <div class="tile-photo photo-main"><img src="./img/icons-about-second.svg" alt=""></div>
-                                        <div class="tile-photo photo-second"><img src="./img/phone-about.svg" alt=""></div>
+                                        <div class="tile-photo photo-second"><img src="./img/phone-about.png" alt=""></div>
                                     </div>
                                 </div>
                             </div>
@@ -638,7 +638,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="action-wrap">
+                        <div class="action-wrap action-qr">
                             <div class="action-title">Scan to download </div>
                             <div class="action-button">
                                 <a href="" class="btn-action-qr">
